--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <div class="container">
         <div class="logo">
             <h1>🚀 Resume Writer</h1>
-            <p>AI-Powered Resume Optimization</p>
+            <p>Resume Optimization</p>
         </div>
 
         <form id="configForm">
@@ -272,7 +272,7 @@
         <div class="features">
             <h3>API Features</h3>
             <ul class="feature-list">
-                <li>AI-Powered Resume Generation</li>
+                <li>Resume Generation</li>
                 <li>Job Description Alignment</li>
                 <li>PDF & DOCX Export</li>
                 <li>Smart Caching</li>
