--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
   <h1>Privacy Policy</h1>
   <p><strong>Last updated:</strong> November 2025</p>
 
-  <p>[Your App Name] (“we,” “our,” or “us”) operates the Resume Boost mobile application (the “App”). This Privacy Policy explains how we collect, use, and protect your information when you use our App.</p>
+  <p>Resume Boost (“we,” “our,” or “us”) operates the Resume Boost mobile application (the “App”). This Privacy Policy explains how we collect, use, and protect your information when you use our App.</p>
 
   <h2>1. Information We Receive</h2>
   <ul>
