Update API base URL in admin dashboard
w

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -316,7 +316,7 @@
 
     <script>
         // Configuration - UPDATE THIS WITH YOUR ACTUAL RENDER URL
-        const API_BASE_URL = 'https://your-resume-api.onrender.com'; // ⚠️ CHANGE THIS!
+        const API_BASE_URL = 'https://resume-writer-api.onrender.com/'; // ⚠️ CHANGE THIS!
         let adminKey = '';
         let usePublicEndpoints = true;
         let refreshInterval;
