--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -347,9 +347,9 @@
                 <!-- Messages -->
                 <div id="messageContainer" style="display: none;"></div>
 
-                <!-- ========== GOOGLE DRIVE BACKUP STATUS ========== -->
+                <!-- ========== B2 BLAZE DRIVE BACKUP STATUS ========== -->
                 <div class="stats-section">
-                    <h3>💾 Google Drive Backup (Admin Only)</h3>
+                    <h3>💾 B2 BLAZE Drive Backup (Admin Only)</h3>
                     <div class="stats-row">
                         <div class="stat-mini-card">
                             <div class="stat-mini-label">Local Snapshots</div>
@@ -469,28 +469,28 @@
 
                 <!-- User Analytics -->
                 <div class="stats-section">
-                    <h3>👥 User Analytics</h3>
+                    <h3>👥 User Activity Analytics</h3>  <!-- Changed from "User Analytics" -->
                     <div class="stats-row">
                         <div class="stat-mini-card">
-                            <div class="stat-mini-label">Total Users Tracked</div>
+                            <div class="stat-mini-label">Users with Activity</div>  <!-- Changed -->
                             <div class="stat-mini-value" id="totalUsersTracked">0</div>
-                        </div>
-                        <div class="stat-mini-card">
-                            <div class="stat-mini-label">Active Today</div>
-                            <div class="stat-mini-value" id="activeUsersToday">0</div>
-                        </div>
-                        <div class="stat-mini-card">
-                            <div class="stat-mini-label">Total Requests</div>
-                            <div class="stat-mini-value" id="totalUserRequests">0</div>
-                        </div>
-                        <div class="stat-mini-card">
-                            <div class="stat-mini-label">Top User Requests</div>
-                            <div class="stat-mini-value" id="topUserRequests">0</div>
-                        </div>
                     </div>
-                    
-                    <div id="topUsersList">
-                        <p>Loading user analytics...</p>
+                    <div class="stat-mini-card">
+                        <div class="stat-mini-label">Active Today</div>
+                        <div class="stat-mini-value" id="activeUsersToday">0</div>
+                    </div>
+                    <div class="stat-mini-card">
+                        <div class="stat-mini-label">Total Requests</div>
+                        <div class="stat-mini-value" id="totalUserRequests">0</div>
+                    </div>
+                    <div class="stat-mini-card">
+                        <div class="stat-mini-label">Top User Activity</div>  <!-- Changed -->
+                        <div class="stat-mini-value" id="topUserRequests">0</div>
+                    </div>
+                </div>
+    
+                <div id="topUsersList">
+                    <p>No user activity recorded yet. Users will appear here after making requests.</p>
                     </div>
                 </div>
 
