--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -2407,12 +2407,15 @@ function updateEnhancedDashboard(stats) {
         // Update auto-refresh to be less aggressive
         function startAutoRefresh() {
             if (autoRefreshEnabled) {
-                // Increase from 30s to 45s to reduce load
-                refreshInterval = setInterval(refreshStats, 45000);
-                document.getElementById('autoRefreshStatus').textContent = 'On (45s)';
+                refreshInterval = setInterval(refreshStats, 30000);
+                const autoRefreshStatus = document.getElementById('autoRefreshStatus');
+            if (autoRefreshStatus) {
+                autoRefreshStatus.textContent = 'On (30s)';
+            } else {
+                console.warn('⚠️ Element not found: autoRefreshStatus');
+            }
         }
     }
-
         function stopAutoRefresh() {
             if (refreshInterval) {
                 clearInterval(refreshInterval);
