--- a/Admin_Try_Test.html
+++ b/Admin_Try_Test.html
@@ -901,6 +901,13 @@
                     </div>
                 </div>
             </div>
+        <div class="stat-card">
+    <div class="stat-label">New Users Today</div>
+    <div id="newUsersToday" class="stat-value">0</div>
+</div>
+
+
+            
         </div>
     </div>
 
