--- a/Admin_Try_Test.html
+++ b/Admin_Try_Test.html
@@ -1955,9 +1955,11 @@ ${error.extra_data ? `Extra Data: ${JSON.stringify(error.extra_data, null, 2)}` 
                 // Cache stats
                 const hits = dailyStats.daily_cache_hits || 0;
                 const misses = dailyStats.daily_cache_misses || 0;
+                const newUsersToday = stats.daily_stats.new_users_today || 0;
                 const totalRequests = hits + misses;
                 const hitRate = totalRequests > 0 ? (hits / totalRequests) * 100 : 0;
                 const savings = hits * 0.02;
+                
                 
                 document.getElementById('cacheHitRate').textContent = `${hitRate.toFixed(1)}%`;
                 document.getElementById('cacheEfficiency').textContent = `${hitRate.toFixed(1)}%`;
