--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1955,7 +1955,7 @@ ${error.extra_data ? `Extra Data: ${JSON.stringify(error.extra_data, null, 2)}` 
                 // Cache stats
                 const hits = dailyStats.daily_cache_hits || 0;
                 const misses = dailyStats.daily_cache_misses || 0;
-                const newUsersToday = stats.daily_stats.new_users_today || 0;
+                const newUsersToday = dailyStats.new_users_today ?? 0;
                 const totalRequests = hits + misses;
                 const hitRate = totalRequests > 0 ? (hits / totalRequests) * 100 : 0;
                 const savings = hits * 0.02;
