--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1975,6 +1975,12 @@ ${error.extra_data ? `Extra Data: ${JSON.stringify(error.extra_data, null, 2)}` 
                 document.getElementById('newUsersToday').textContent = newUsersToday;
                 document.getElementById('emailVerifiedCount').textContent = dailyStats.email_verified_count || 0;
             }
+
+            // Optional debug log
+            console.log('👤 User counts extracted:', {
+                today: newUsersToday,
+                
+            });
             
             // Update JD alignment stats
             if (stats.jd_alignment_stats) {
