--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -873,7 +873,7 @@
             
             <!-- User Analytics -->
             <div class="section-card">
-                <h3 class="section-title">👥 User Analytics</h3>
+                <h3 class="section-title">👨‍👨‍👦‍👦 User Analytics</h3>
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 24px;">
                     <div style="background: #0f172a; padding: 16px; border-radius: 8px; border: 1px solid #334155; text-align: center;">
                         <div style="font-size: 1.5rem; font-weight: 700; color: #e2e8f0;" id="totalUsersTracked">0</div>
