--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -774,15 +774,12 @@
                 <!-- Error List -->
                 <div id="errorListContainer">
                     <div id="errorList" style="min-height: 200px;">
-                        <div style="text-align: center; padding: 40px; color: #94a3b8;">
-                            <div style="font-size: 3rem; margin-bottom: 16px;">📊</div>
-                            <h3 style="margin-bottom: 8px; color: #e2e8f0;">No Errors Found</h3>
-                            <p>Errors will appear here when they occur. Start the error stream to monitor in real-time.</p>
-                            <button class="btn btn-success" onclick="startErrorStream()" style="margin-top: 20px;">
-                                ▶ Start Real-time Monitoring
-                            </button>
-                        </div>
+                    <div style="text-align: center; padding: 40px; color: #94a3b8;">
+                        <div style="font-size: 3rem; margin-bottom: 16px;">🎉</div>
+                        <h3 style="margin-bottom: 8px; color: #e2e8f0;">No Errors Found</h3>
+                        <p>Great! No errors in the system.</p>
                     </div>
+                </div>
                 </div>
             </div>
 
